fix : alignment issue

--- a/app/app.css
+++ b/app/app.css
@@ -25,8 +25,8 @@
   color: black;
   align-items: center;
   box-shadow: 0px 10px 15px white;
-  padding-left: 10%;
-  padding-right: 10%;
+  padding-left: 8%;
+  padding-right: 5%;
 
   .title-section {
     display: flex;
@@ -51,7 +51,7 @@
   .other-links-wrapper {
     display: flex;
     justify-content: space-between;
-    max-width: 600px;
+    max-width: 650px;
     width: 100%;
     overflow: hidden;
     font-size: 20px;
